<resources>
    <string name="app_name">ProMovie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internet_subtitle">Не удалось подключиться к серверу. Приносим свои извинение за предоставленное не удобство</string>
    
    
    <string name="popular_txt">Popular</string>
    <string name="top_txt">Top Rated</string>
    <string name="upcoming_txt">Upcoming</string>
    <string name="now_txt">Now Playing</string>


    <string name="telegram_channel">Telegram channel</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="about_us">About us</string>


    <string name="back">Back</string>

    <string name="about_txt">About us</string>

    <string name="send_email">Send message</string>






</resources>